Mutation fixes